--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
             touch-action: manipulation;
         }
 
+        #timer-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            transform-origin: left;
+            transform: scaleX(1);
+        }
         #toggle-controls:hover {
             background: rgba(0, 0, 0, 0.8);
         }
